--- a/Training/EJS/Task-EJS/Views/Pages/home.ejs
+++ b/Training/EJS/Task-EJS/Views/Pages/home.ejs
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,7 +11,6 @@
     <!-- <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script> -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script> -->
 </head>
-
 <body style="margin: 10px 20px;" class="border border-dark rounded ">
     <table class="table  table-hover ">
         <thead>
@@ -23,26 +21,24 @@
                 <th>Gender</th>
             </tr>
         </thead>
-        <tbody >
-            <% for (var i=0; i < results.length;i++){%>
+        <tbody>
+            <% results.forEach((data)=> { %>   
                 <tr>
                     <td>
-                        <%= results[i].id %>
+                        <%= data.id %>
                     </td>
                     <td>
-                        <%= results[i].name %>
+                        <%= data.name %>
                     </td>
                     <td>
-                        <%= results[i].age %>
+                        <%= data.age %>
                     </td>
                     <td>
-                        <%= results[i].gender %>
+                        <%= data.gender %>
                     </td>
                 </tr>
-                <% } %>
-
+                <% }); %>
         </tbody>
     </table>
 </body>
-
 </html>
